--- a/End.html
+++ b/End.html
@@ -3,16 +3,243 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Subbmited</title>
 </head>
+
+<style>
+    *{
+        padding: 0;
+        margin: 0;
+    }
+    h2,p,section{
+        text-align: center;
+    }
+
+.j{
+    width: 190px;
+    padding-block: 15px;
+    text-align: center;
+    border:2px solid #487674;
+    border-bottom:5px solid #487674;
+    padding: 10px;
+    border-radius: 40px;
+    background-color: white;
+    color: #487674;
+    display: block;
+    margin: 30px auto;
+
+}
+.j:hover{
+    background-color: #487674;
+    color: white;
+}
+main{
+    padding-top: 15vh;
+}
+
+.card-client {
+  background: #2cb5a0;
+  width: 10rem;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: 4px solid #38534f;
+  box-shadow: 0 6px 10px rgba(207, 212, 222, 1);
+  border-radius: 10px;
+  text-align: center;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  transition: all 0.3s ease;
+}
+
+
+
+.user-picture {
+  overflow: hidden;
+  object-fit: cover;
+  width: 5rem;
+  height: 5rem;
+  border: 4px solid #313b39;
+  border-radius: 999px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.user-picture svg {
+  width: 2.5rem;
+  fill: currentColor;
+}
+
+.name-client {
+  margin: 0;
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.name-client span {
+  display: block;
+  font-weight: 200;
+  font-size: 16px;
+}
+
+.social-media:before {
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 2px;
+  margin: 20px 0;
+  background: #7cdacc;
+}
+
+.social-media a {
+  position: relative;
+  margin-right: 15px;
+  text-decoration: none;
+  color: inherit;
+}
+
+.social-media a:last-child {
+  margin-right: 0;
+}
+
+.social-media a svg {
+  width: 1.1rem;
+  fill: currentColor;
+}
+
+/*-- Tooltip Social Media --*/
+.tooltip-social {
+  background: #262626;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  padding: 0.5rem 0.4rem;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  font-weight: 600;
+  opacity: 0;
+  pointer-events: none;
+  transform: translate(-50%, -90%);
+  transition: all 0.2s ease;
+  z-index: 1;
+}
+
+.tooltip-social:after {
+  content: " ";
+  position: absolute;
+  bottom: 1px;
+  left: 50%;
+  border: solid;
+  border-width: 10px 10px 0 10px;
+  border-color: transparent;
+  transform: translate(-50%, 100%);
+}
+
+.social-media a .tooltip-social:after {
+  border-top-color: #262626;
+}
+
+.social-media a:hover .tooltip-social {
+  opacity: 1;
+  transform: translate(-50%, -130%);
+}
+</style>
+
 <body>
     <header>
+		<div style="display: flex; margin: 20px; align-items: center;">
+			<img src="Logo.png">
+			<div>
+				<h1>NSS UNIT</h1>
+				<p style="letter-spacing: 2px;text-align:left ;">Enrollment</p>
+			</div>
+		</div>
+        <img src="1669117148833.png" alt="Uniform unit" style="height: 90px;object-fit: cover;object-position: 0px 10px;">
+	</header>
 
-    </header>
     <main>
         <h2>Thank You</h2>
         <p>Your Response is Subbmited.For updates Join Whatsapp group</p>
-        <a href="https://chat.whatsapp.com/KVNUD77QOyvHBwFcS8fBDZ">Join Whatsapp Group</a>
+        <a class="j" href="https://chat.whatsapp.com/KVNUD77QOyvHBwFcS8fBDZ">Join Whatsapp Group</a>
+        <hr>
+        <section>
+            <a href=""><img width="40" height="40" src="https://img.icons8.com/color/480/instagram-new--v1.png" alt="instagram-new--v1"/></a>
+            <a href=""><img width="40" height="40" src="https://img.icons8.com/color/480/youtube-play.png" alt="youtube-play"/></a>
+            <a href=""><img width="40" height="40" src="https://img.icons8.com/color/480/linkedin.png" alt="linkedin"/></a>
+            <a href=""><img width="40" height="40" src="https://img.icons8.com/color/480/facebook.png" alt="facebook"/></a>
+        </section>
     </main>
+    <footer>
+        <h2 style="padding-block: 20px;">Devloped By</h2>
+        <section style="display:flex;justify-content: space-around;margin-top: 25px;">
+        <div class="card-client">
+            <div class="user-picture">
+                <svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"></path>
+                </svg>
+            </div>
+            <p class="name-client"> Kunal Upadhyay
+                <span>Cell Coordinator
+                </span>
+            </p>
+            <div class="social-media">
+                <a href="#">
+                    <img width="26" height="26" src="https://img.icons8.com/glyph-neue/512/github.png" alt="github"/>                    <span class="tooltip-social">GitHub</span>
+                </a>
+                <a href="#">
+                    <img width="25" height="25" src="https://img.icons8.com/ios/500/instagram-new--v1.png" alt="instagram-new--v1"/>
+                    <span class="tooltip-social">Instagram</span>
+                </a>
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path>
+                    </svg>
+                    <span class="tooltip-social">Facebook</span>
+                </a>
+                <a href="#">
+                    <img width="24" height="24" src="https://img.icons8.com/ios-filled/500/linkedin-2--v1.png" alt="linkedin-2--v1"/>
+                    <span class="tooltip-social">LinkedIn</span>
+                </a>
+            </div>
+        </div>
+
+        <div class="card-client">
+            <div class="user-picture">
+                <svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"></path>
+                </svg>
+            </div>
+            <p class="name-client"> Prateek Kumar
+                <span>Cell Coordinator
+                </span>
+            </p>
+            <div class="social-media">
+                <a href="#">
+                    <img width="26" height="26" src="https://img.icons8.com/glyph-neue/512/github.png" alt="github"/>                    <span class="tooltip-social">GitHub</span>
+                </a>
+                <a href="#">
+                    <img width="25" height="25" src="https://img.icons8.com/ios/500/instagram-new--v1.png" alt="instagram-new--v1"/>
+                    <span class="tooltip-social">Instagram</span>
+                </a>
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                        <path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"></path>
+                    </svg>
+                    <span class="tooltip-social">Facebook</span>
+                </a>
+                <a href="#">
+                    <img width="24" height="24" src="https://img.icons8.com/ios-filled/500/linkedin-2--v1.png" alt="linkedin-2--v1"/>
+                    <span class="tooltip-social">LinkedIn</span>
+                </a>
+            </div>
+        </div>
+    </section>
+    </footer>
 </body>
 </html>
