--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
 
     <link rel="shortcut icon" href="Logo.png" type="image/x-icon">
-    <title>NSS Registratiodn </title>
+    <title>NSS Enrollment </title>
 </head>
 
 <script>
@@ -40,11 +40,11 @@
     <main>
         <div id="T&C">
             <article style="padding: 50px;padding-bottom: 0px;">
-                <h2>Terms and Conditions</h2>
+                <h2>Instructions</h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique repudiandae, accusamus facilis est reiciendis quae? Animi natus quasi nihil excepturi dolores porro hic sit, perspiciatis beatae incidunt nam tenetur necessitatibus recusandae pariatur quia veritatis? Voluptates magnam, odit consequatur eos nesciunt error distinctio reprehenderit soluta? Similique fugit aliquid ipsa! Nesciunt, similique?</p>
+                <p style="text-align: justify;">All the students of Undergraduate courses irrespective of their genders are eligible to attend the enrollment process.</p>
             </article>
-            <button onclick="tctfrm()">Agree & Continue</button>
+            <button onclick="tctfrm()">Proceed </button>
         </div>
 
         <div class="cont" id="main">
@@ -62,7 +62,7 @@
             </div>
             <div class="coolinput">
                 <label for="input" class="text">Mobile No.</label>
-                <input type="tel" placeholder="+91 XXX XXXX XXX" name="entry.1597630318" class="input" required="1">
+                <input type="tel" placeholder="+91 XXX XXXX XXX" name="entry.1597630318" class="input" required="1" minlength="10">
             </div>
 
             <div class="coolinput">
@@ -72,7 +72,7 @@
 
             <div class="coolinput">
                 <label for="input" class="text">Reason</label>
-                <textarea name="entry.1742369575" id="" cols="30" rows="10" placeholder="Why do you want to join UNIFORM UNIT ? Write here..." class="input"></textarea>            
+                <textarea name="entry.1742369575" id="" cols="30" rows="10" placeholder="Why do you want to join UNIFORM UNIT ? Write here..." class="input" required="1"></textarea>            
             </div>
 
 
