--- a/index.html
+++ b/index.html
@@ -83,16 +83,18 @@
     </div>
     </main>
 
-    <footer>
+    <footer id="fotter">
         # DEVLOPED IN INDIA
     </footer>
 </body>
 <script>
     let tnc=document.getElementById("T&C");
     let mnf=document.getElementById("main");
+    let fot=document.getElementById("fotter");
     function tctfrm(){
         tnc.style.display="none";
         mnf.style.display="block";
+        fot.style.position="static";
     }
 </script>
 </html>
